--- a/src/ServiceControl.Audit/Properties/launchSettings.json
+++ b/src/ServiceControl.Audit/Properties/launchSettings.json
@@ -14,6 +14,13 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "commandLineArgs": "--setup"
+    },
+    "Integrated Setup": {
+      "commandName": "Project",
+      "commandLineArgs": "--integrated-setup",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
     }
   }
 }
