--- a/src/ServiceControl.Audit/Properties/launchSettings.json
+++ b/src/ServiceControl.Audit/Properties/launchSettings.json
@@ -9,15 +9,16 @@
     },
     "Setup ServiceControl.Audit": {
       "commandName": "Project",
+      "commandLineArgs": "--setup",
       "launchBrowser": false,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      },
-      "commandLineArgs": "--setup"
+      }
     },
-    "Integrated Setup": {
+    "Setup and Run ServiceControl.Audit": {
       "commandName": "Project",
       "commandLineArgs": "--setup-and-run",
+      "launchBrowser": false,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
