--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -291,3 +291,88 @@ jobs:
           Invoke-Expression $manifestCreate
           docker buildx imagetools inspect ghcr.io/particular/servicecontrol-ravendb:${{ env.TAG_NAME }}
           docker manifest push ghcr.io/particular/servicecontrol-ravendb:${{ env.TAG_NAME }}
+  container-test:
+    if: ${{ github.actor != 'dependabot[bot]' }}
+    needs: [ 'containers', 'db-containers' ]
+    runs-on: ubuntu-22.04
+    name: container-test
+    defaults:
+      run:
+        shell: bash
+    strategy:
+      matrix:
+        include:
+          - name: RabbitMQ
+            transport: RabbitMQ.QuorumConventionalRouting
+            connection-string: 'host=transport'
+          - name: SqlServer
+            transport: SQLServer
+            connection-string: 'Server=transport;Database=master;User=sa;Password=ServiceControl1!;Encrypt=False;'
+    steps:
+      - name: Check for secrets
+        env:
+          SECRETS_AVAILABLE: ${{ secrets.SECRETS_AVAILABLE }}
+        shell: pwsh
+        run: exit $(If ($env:SECRETS_AVAILABLE -eq 'true') { 0 } Else { 1 })
+      - name: Checkout
+        uses: actions/checkout@v4.1.7
+        with:
+          fetch-depth: 0
+      - name: Install MinVer CLI
+        run: dotnet tool install --global minver-cli
+      - name: Determine versions
+        shell: pwsh
+        run: |
+          # Read settings from Custom.Build.props
+          [xml]$xml = Get-Content ./src/Custom.Build.props
+          $minMajorMinor = $xml.selectNodes('/Project/PropertyGroup/MinVerMinimumMajorMinor').InnerText
+          $autoIncrement = $xml.selectNodes('/Project/PropertyGroup/MinVerAutoIncrement').InnerText
+          echo "MinVerMinimumMajorMinor=$minMajorMinor, MinVerAutoIncrement=$autoIncrement"
+          if (-not ($minMajorMinor -and $autoIncrement)) {
+            throw "Missing MinVer settings in Custom.Build.props"
+          }
+
+          # Execute MinVer
+          echo "MinVerVersion=$(minver --minimum-major-minor $minMajorMinor --auto-increment $autoIncrement)" | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf-8 -Append
+      - name: Validate build version
+        if: ${{ github.event_name == 'push' && github.ref_type == 'tag' }}
+        uses: ./.github/actions/validate-version
+        with:
+          version: ${{ env.MinVerVersion }}
+      - name: Log in to GitHub container registry
+        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+      - name: Run Docker Compose
+        shell: bash
+        run: |
+          echo 'Creating .env file'
+          cd src/compose-test
+          echo 'SERVICECONTROL_TAG=${{ env.MinVerVersion }}' > .env
+          echo 'TRANSPORTTYPE=${{ matrix.transport }}' >> .env
+          echo 'CONNECTIONSTRING=${{ matrix.connection-string || env.ConnectionString }}' >> .env
+          cat .env
+          echo '--------------------'
+
+          echo 'Adding ${{matrix.name}} transport configuration to compose.yml'
+          echo '' >> compose.yml
+          echo '' >> compose.yml
+          cat ${{ matrix.name }}.yml >> compose.yml
+          cat compose.yml
+          echo '--------------------'
+
+          echo 'Starting services...'
+          docker compose up -d
+          sleep 10
+      - name: Query running containers'
+        shell: pwsh
+        run: |
+          $return = 0
+          $lines = (docker ps | Measure-Object -Line).Lines
+
+          # Should be 1 for headers + 1 for transport + 1 for DB + 3 instances = 6
+          if ($lines -ne 6) {
+            echo "Wrong number of running instances"
+            return = 1
+          }
+
+          docker compose down
+          exit $return
