--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "pinia": "^2.2.2",
     "vue": "^3.4.38",
     "vue-router": "^4.4.3",
+    "vue-tippy": "^6.4.4",
     "vue-toastification": "^2.0.0-rc.5",
     "vue3-cookies": "^1.0.6",
     "vue3-simple-typeahead": "^1.0.11"
