--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -169,22 +169,8 @@ jobs:
         uses: actions/checkout@v4.1.7
         with:
           fetch-depth: 0
-      - name: Install MinVer CLI
-        run: dotnet tool install --global minver-cli
-      - name: Determine versions
-        shell: pwsh
-        run: |
-          # Read settings from Custom.Build.props
-          [xml]$xml = Get-Content ./src/Custom.Build.props
-          $minMajorMinor = $xml.selectNodes('/Project/PropertyGroup/MinVerMinimumMajorMinor').InnerText
-          $autoIncrement = $xml.selectNodes('/Project/PropertyGroup/MinVerAutoIncrement').InnerText
-          echo "MinVerMinimumMajorMinor=$minMajorMinor, MinVerAutoIncrement=$autoIncrement"
-          if (-not ($minMajorMinor -and $autoIncrement)) {
-            throw "Missing MinVer settings in Custom.Build.props"
-          }
-
-          # Execute MinVer
-          echo "MinVerVersion=$(minver --minimum-major-minor $minMajorMinor --auto-increment $autoIncrement)" | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf-8 -Append
+      - name: Run MinVer
+        uses: Particular/run-minver-action@v1.0.0
       - name: Validate build version
         if: ${{ github.event_name == 'push' && github.ref_type == 'tag' }}
         uses: ./.github/actions/validate-version
@@ -231,22 +217,8 @@ jobs:
         uses: actions/checkout@v4.1.7
         with:
           fetch-depth: 0
-      - name: Install MinVer CLI
-        run: dotnet tool install --global minver-cli
-      - name: Determine versions
-        shell: pwsh
-        run: |
-          # Read settings from Custom.Build.props
-          [xml]$xml = Get-Content ./src/Custom.Build.props
-          $minMajorMinor = $xml.selectNodes('/Project/PropertyGroup/MinVerMinimumMajorMinor').InnerText
-          $autoIncrement = $xml.selectNodes('/Project/PropertyGroup/MinVerAutoIncrement').InnerText
-          echo "MinVerMinimumMajorMinor=$minMajorMinor, MinVerAutoIncrement=$autoIncrement"
-          if (-not ($minMajorMinor -and $autoIncrement)) {
-            throw "Missing MinVer settings in Custom.Build.props"
-          }
-
-          # Execute MinVer
-          echo "MinVerVersion=$(minver --minimum-major-minor $minMajorMinor --auto-increment $autoIncrement)" | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf-8 -Append
+      - name: Run MinVer
+        uses: Particular/run-minver-action@v1.0.0
       - name: Validate build version
         if: ${{ github.event_name == 'push' && github.ref_type == 'tag' }}
         uses: ./.github/actions/validate-version
